--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,6 @@ SET(CMAKE_CXX_FLAGS "-Wall -O2")
 
 INCLUDE_DIRECTORIES("${CMAKE_SOURCE_DIR}/jansson-2.9")
 ADD_SUBDIRECTORY("${CMAKE_SOURCE_DIR}/jansson-2.9")
-LINK_LIBRARIES(jansson doublefann)
+LINK_LIBRARIES(jansson)
 
 ADD_EXECUTABLE(${PROJECT_NAME} "project-612.hpp" "project-612.cpp")
