--- a/jansson-2.9/CMakeLists.txt
+++ b/jansson-2.9/CMakeLists.txt
@@ -1,5 +1,5 @@
-cmake_minimum_required(VERSION 2.8)
+CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
 
-file(GLOB JANSSON_LIB_SRC "*.h" "*.c")
+FILE(GLOB JANSSON_LIB_SRC "*.h" "*.c")
 
-add_library(jansson ${JANSSON_LIB_SRC})
+ADD_LIBRARY(jansson ${JANSSON_LIB_SRC})
