--- a/sqlite-3.8.7/CMakeLists.txt
+++ b/sqlite-3.8.7/CMakeLists.txt
@@ -1,5 +1,5 @@
-cmake_minimum_required(VERSION 2.8)
+CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
 
-file(GLOB SQLITE_LIB_SRC "*.h" "*.c")
+FILE(GLOB SQLITE_LIB_SRC "*.h" "*.c")
 
-add_library(sqlite ${SQLITE_LIB_SRC})
+ADD_LIBRARY(sqlite ${SQLITE_LIB_SRC})
