--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 CMAKE_MINIMUM_REQUIRED(VERSION 3.0)
 
 PROJECT(project-612)
-SET(CMAKE_CXX_FLAGS "-Wall -O1")
+SET(CMAKE_CXX_FLAGS "-Wall -O1 -no-pie")
 
 INCLUDE_DIRECTORIES("${CMAKE_SOURCE_DIR}/sqlite-3.8.7")
 INCLUDE_DIRECTORIES("${CMAKE_SOURCE_DIR}/jansson-2.9")
